tests/NormalTests/paczka1/small_fuzzy/55897496.err
Error in line 5: GVfKVQBLX S345 44,1
Error in line 10: 6gG2z A892 81,4
